first selector practice

--- a/firstDoc.html
+++ b/firstDoc.html
@@ -16,12 +16,21 @@
     <li>Yoga</li>
   </ul> -->
   <h1>Hello, I like:</h1>
-    <form>
-      <ul>
-        <li class="to_do_list"><input type="checkbox" checked>Surfing</li>
-        <li class="to_do_list"><input type="checkbox" checked>Scuba Diving</li>
-        <li id="interest_yoga"><input type="checkbox">Yoga</li>
+  <form>
+    <div id="interests">
+      <ul id="merge">
+          <li class="to_do_list"><input type="checkbox" checked>Surfing</li>
+          <li class="to_do_list"><input type="checkbox" checked>Scuba Diving</li>
+          <li id="interest_yoga"><input type="checkbox">Yoga</li>
+          <ul>
+            <li class="to_do_list"><input type="checkbox" checked>Surfing</li>
+            <li class="to_do_list"><input type="checkbox" checked>Scuba Diving</li>
+            <li class="to_do_list"><input type="checkbox" checked>Scuba Diving</li>
+            <li class="to_do_list"><input type="checkbox" checked>Scuba Diving</li>
+            <li id="interest_school"><input type="checkbox">Yoga</li>
+          </ul>
       </ul>
-    </form>
+    </div>
+  </form>
 </body>
 </html>
