final touches for blog exercise

--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div>
-    <h3>November 20th</h3>
+    <h3 class="date">November 20th</h3>
     <h1>This is An Article</h1>
     <p>
       Bacon ipsum dolor amet capicola porchetta frankfurter, swine pork belly landjaeger brisket shankle pork loin hamburger bacon corned beef. Alcatra pork belly pastrami, capicola chicken ham turkey kielbasa chuck tenderloin fatback hamburger turducken. Turkey tri-tip rump pastrami kevin cupim pig salami biltong capicola ball tip prosciutto meatloaf pancetta short ribs. Tri-tip brisket ham hock alcatra boudin. Burgdoggen pork biltong spare ribs shankle pork belly pancetta pork chop. Flank jowl spare ribs landjaeger pork chop. Shank hamburger ball tip, jerky ham ground round burgdoggen.
@@ -17,8 +17,8 @@
     </p>
   </div>
     <hr></hr>
-    <h3>November 23rd</h3>
-    <h1>This is An Article</h1>
+    <h3 class="date">November 23rd</h3>
+    <h1></h1>This is An Article</h1>
   <div>
     <p>
         Shankle tongue chuck, shank cow boudin porchetta leberkas shoulder frankfurter. Pork loin frankfurter meatloaf kielbasa, boudin shank short ribs jowl andouille beef ribs capicola corned beef. Beef ribs ribeye hamburger pork chop capicola. Jowl pork chop sausage leberkas tongue sirloin beef ribs tail alcatra corned beef cow. Spare ribs biltong swine flank.
